<resources>
    <!-- General Strings-->
    <string name="app_name">Social Musician</string>
    <string name="app_by">by Kenzy Suon</string>

    <string name="facebook_app_id">489496498263384</string>
    <string name="fb_login_protocol_scheme">fb489496498263384</string>

    <!-- Strings related to Bottom Navigation View in Main App -->
    <string name="bottom_navigation_view_home">Home</string>
    <string name="bottom_navigation_view_music">My Music</string>

    <!--region [Strings related to Sign In / Sign Up]-->
    <!--region Strings related to Bottom Navigation View in Sign In and Sign Up -->
    <string name="bottom_navigation_sign_in">Sign In</string>
    <string name="bottom_navigation_sign_up">Sign Up</string>
    <string name="bottom_navigation_sign_up_network">With Socials Networks</string>
    <!--endregion Strings related to Bottom Navigation View in Sign In and Sign Up -->

    <!--region Strings related to SignInActivity -->
    <string name="sign_in_activity_mail_hint">Enter your mail address</string>
    <string name="sign_in_activity_password_hint">Enter your password</string>
    <string name="sign_in_activity_forget_password_link">Forgot password ?</string>
    <string name="sign_in_activity_app_description">A Social Network for Musicians</string>
    <string name="sign_in_activity_button_sign_in">Sign In</string>

    <string name="sign_in_activity_app_logo_content_description">Social Musician Logo</string>
    <string name="sign_in_activity_mail_content_description">Email Icon</string>
    <string name="sign_in_activity_password_content_description">Password Icon</string>
    <!--endregion Strings related to SignInActivity -->

    <!--region Strings related to SignUpActivity -->
    <string name="sign_up_activity_first_name_hint">First Name</string>
    <string name="sign_up_activity_last_name_hint">Last Name</string>
    <string name="sign_up_activity_mail_address_hint">Mail Address</string>
    <string name="sign_up_activity_password_hint">Password</string>
    <string name="sign_up_activity_confirmed_password_hint">Password Confirmed</string>

    <string name="sign_up_activity_name_content_description">Name Icon</string>
    <string name="sign_up_activity_mail_address_content_description">Email Icon</string>
    <string name="sign_up_activity_password_content_description">Password Icon</string>
    <!--endregion Strings related to SignUpActivity -->
    <!--endregion [Strings related to Sign In / Sign Up]-->

    <!-- Strings related to MyProfile -->
    <string name="my_profile_user_name">Ken Suon</string>
    <string name="my_profile_user_age">22 ans</string>
    <string name="my_profile_music_instrument">Guitar</string>
    <string name="my_profile_music_style">Jazz Funk</string>
    <string name="my_profile_from">Paris, France</string>
    <string name="menu_slash">|</string>
    <string name="my_profile_record">Records</string>
    <string name="my_profile_record_number">52</string>
    <string name="my_profile_following">Following</string>
    <string name="my_profile_following_number">123</string>
    <string name="my_profile_follower">Followers</string>
    <string name="my_profile_follower_number">216</string>
    <string name="my_profile_description">“My future starts when I wake up every morning. Every day I find something creative to do with my life.”</string>

    <!-- Strings related to MyFriends -->
    <string name="my_friends_user_name">User Name</string>
    <string name="my_friends_user_age">22 ans</string>
    <string name="my_friends_music_instrument">Trumpet</string>
    <string name="my_friends_music_style">Bebop Jazz</string>
    <string name="my_friends_from">New York, USA</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_user_profil">UserProfilActivity</string>
    <string name="title_activity_user">UserActivity</string>

    <!-- Strings related to Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_my_friends">My Friends</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="menu_title">Other</string>
    <string name="menu_help">Help</string>
    <string name="menu_log_out">Log Out</string>
</resources>
