<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_speech_bubble"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_my_friends" />
    </group>

    <item android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_gears"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_information"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
