<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in_activity_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_background"
    tools:context=".controller.activity.SignInActivity">

    <ImageView
        android:id="@+id/sign_in_activity_app_logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/sign_in_activity_app_logo_content_description"
        android:src="@drawable/ic_musical_notes_symbols"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_app_description" />

    <RelativeLayout
        android:id="@+id/sign_in_activity_email_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_edit_text_layout_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_app_logo">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sign_in_activity_email_edit_text"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/sign_in_activity_email_image_view"
            android:background="@drawable/custom_edit_text_background"
            android:hint="@string/sign_in_activity_mail_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColorLightGrey" />

        <!--android:layout_width="@dimen/width_edit_text"-->
        <!--android:layout_height="@dimen/height_edit_text"-->

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sign_in_activity_email_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_background_grey"
            android:contentDescription="@string/sign_in_activity_mail_content_description"
            app:srcCompat="@drawable/ic_man_user" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_in_activity_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_edit_text_layout_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_email_layout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/sign_in_activity_password_edit_text"
            android:layout_width="@dimen/width_edit_text"
            android:layout_height="@dimen/height_edit_text"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/sign_in_activity_password_image_view"
            android:background="@drawable/custom_edit_text_background"
            android:hint="@string/sign_in_activity_password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/textColorDark"
            android:textColorHint="@color/textColorLightGrey" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/sign_in_activity_password_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_background_grey"
            android:contentDescription="@string/sign_in_activity_password_content_description"
            app:srcCompat="@drawable/ic_lock" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_password_layout">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/sign_in_remember_field_checkbox"
            android:layout_centerVertical="true"
            android:buttonTint="@color/white"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/sign_in_remember_field_checkbox"
            android:layout_marginStart="5dp"
            android:text="Remember field"
            android:textColor="@color/textColorDark" />

    </RelativeLayout>

    <TextView
        android:id="@+id/sign_in_activity_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_activity_app_description"
        android:textColor="@color/textColorLightGrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_app_name" />

    <TextView
        android:id="@+id/sign_in_activity_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sign_in_activity_forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:linksClickable="true"
        android:text="@string/sign_in_activity_forget_password_link"
        android:textColor="@color/colorBlueLinkLight"
        android:textColorLink="@color/colorBlueLinkClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_sign_in_button" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/sign_in_bottom_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.70"
        android:fadingEdge="horizontal"
        android:fadingEdgeLength="20dp"
        android:background="@color/transparentDarkColor"
        app:backgroundTint="@color/transparentDarkColor"
        app:itemIconTint="@color/disconnected_bottom_navigation_color"
        app:itemTextColor="@color/disconnected_bottom_navigation_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/sign_in_bottom_navigation_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_activity_sign_in_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in_activity_button_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_activity_password_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
