<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar_selector"
    android:gravity="bottom"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp">
        <com.suonk.socialmusician.controller.CircularImageView
            android:id="@+id/nav_header_my_profile_user_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            app:civ_border_color="@color/colorPrimary"
            app:srcCompat="@drawable/kenzy_profil_image" />
        <TextView
            android:id="@+id/nav_header_my_profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/nav_header_my_profile_user_image"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/my_profile_user_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/nav_header_my_profile_music_instrument"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/nav_header_my_profile_user_name"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_toEndOf="@+id/nav_header_my_profile_user_image"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:text="@string/my_profile_music_instrument"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/menu_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_below="@+id/nav_header_my_profile_user_name"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:layout_toEndOf="@+id/nav_header_my_profile_music_instrument"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"
            android:text="@string/menu_slash"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/nav_header_my_profile_music_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nav_header_my_profile_user_name"
            android:layout_toEndOf="@+id/menu_slash"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/my_profile_music_style"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </RelativeLayout>
</LinearLayout>
